carousel working,bug with setting carousel-item to anything but w-full

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,7 +65,7 @@
 }
 
 .wide-card {
-  position: relative;
+  /* position: relative; */
   object-fit: cover;
   background-size: contain;
   background-position: center;
