--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,9 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Backgrounds */
 .earth-background {
-    background-image: url('/src/assets/images/backgrounds/earth.jpg');
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh; /* Full height of the viewport */
-  }
+  background-image: url('/src/assets/images/backgrounds/earth.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; /* Full height of the viewport */
+}
+
+/* .half-overlay {
+
+} */
+
+/* Hide on screens larger than the 'md' breakpoint (i.e., desktops) */
+.hiddenOnDesktop {
+  @apply block md:hidden;
+}
+
+/* Hide on screens smaller than the 'md' breakpoint (i.e., mobile devices) */
+.hiddenOnMobile {
+  @apply hidden md:block;
+}
+
+/* Custom Card sizes */
+.small-card {
+  /* position: absolute; */
+  top: 42px;
+  left: 51px;
+  width: 160px;
+  height: 224px;
+  border-radius: 8px;
+}
+
+.wide-card {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 288px;
+  height: 162px;
+  border-radius: 8px; /* Tailwind equivalent: rounded-lg */
+}
+
+.medium-card {
+  /* position: absolute; */
+  top: 334px;
+  left: 63px;
+  width: 201px;
+  height: 283px;
+}
+
+.large-card {
+  /* position: absolute; */
+  top: 70px;
+  left: 0;
+  width: 288px;
+  height: 390px;
+  border-radius: 8px; /* Tailwind equivalent: rounded-lg */
+}
