--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,16 +4,16 @@
 
 /* Backgrounds */
 .earth-background {
-  background-image: url('/public/backgrounds/earth.jpg');
+  background-image: url('/backgrounds/earth.jpg');
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  z-index: -10;
-  position: relative;
+  /* z-index: -10; */
+  /* position: relative; */
 }
 
 .jeep-background {
-  background-image: url('/public/backgrounds/jeep.jpg');
+  background-image: url('/backgrounds/jeep.jpg');
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -21,13 +21,22 @@
   position: relative;
 }
 
+.stars-background {
+  background-image: url('/backgrounds/stars.jpg');
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  /* z-index: -10; */
+  /* position: relative; */
+}
+
 .screen-overlay {
-  background-image: url('/public/overlays/screen-overlay.png');
+  background-image: url('/overlays/screen-overlay.png');
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -5;
+  /* z-index: -5; */
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -76,17 +85,19 @@
   height: 283px;
 }
 
+
 .large-card {
   position: relative;
   object-fit: cover;
   background-size: contain;
   background-position: center;
-  top: 70px;
-  left: 0;
+  margin-top: 36px; /* Adjusted to margin-top */
   width: 288px;
-  height: 390px;
+  height: 400px;
   border-radius: 8px; /* Tailwind equivalent: rounded-lg */
+  overflow: hidden; /* Prevents vertical overflow */
 }
+
 
 /* Scroll Features on Swiping  */
 /*.scroll-container {
@@ -107,4 +118,17 @@
 /* Hide on screens smaller than the 'md' breakpoint (i.e., mobile devices) */
 .hiddenOnMobile {
   @apply hidden md:block;
+}
+
+/* Text */
+.text-top-quest {
+  position: absolute;
+  top: -6px;
+  left: 12px;
+  font-family: DM Sans;
+  font-size: 84px;
+  font-weight: 700;
+  line-height: 110px;
+  color: #9095A080;
+  /* z-index: 0;  */
 }
