--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,8 @@
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  /* set opacity customly in tailwind with 'opacity-90' */
+  position: absolute;
+  opacity: 0.9;
 }
 
 @media (max-width: 800px) {
@@ -94,21 +95,6 @@
   height: 400px;
   border-radius: 8px; /* Tailwind equivalent: rounded-lg */
   overflow: hidden; /* Prevents vertical overflow */
-}
-
-/* Scroll Features on Swiping  */
-.scroll-container {
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-  height: 100vh;
-  z-index: 1;
-}
-
-/* Generic Section */
-.section {
-  height: 100vh;
-  scroll-snap-align: start;
-  z-index: 1;
 }
 
 /* Hide on screens larger than the 'md' breakpoint (i.e., desktops) */
