--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,7 +41,7 @@
   background-position: center;
   min-height: 100vh;
   position: absolute;
-  opacity: 0.9;
+  /* opacity: 0.9; */
 }
 
 @media (max-width: 800px) {
