--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,18 @@
   position: relative;
 }
 
+.quest-image {
+  position: relative;
+  object-fit: cover;
+  object-position: center;
+  top: -1px;
+  left: 0px;
+  width: 100%;
+  max-height: 45vh;
+  border-radius: 0px;
+  z-index: 1;
+}
+
 /*********** Overlays ***********/
 
 .half-overlay {
@@ -77,6 +89,19 @@
   position: absolute;
 }
 
+.quest-overlay {
+  background: rgba(0, 0, 0, 0.801);
+  opacity: .4;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 0px;
+  z-index: 2;
+}
+
+
 /********** Custom Cards ***********/
 
 .small-card {
@@ -88,6 +113,13 @@
   width: 160px;
   height: 224px;
   border-radius: 8px;
+}
+
+@media only screen and (max-width: 768px) {
+  .small-card {
+    width: 125px; /* Adjusted width for mobile */
+    height: 180px; /* Adjusted height for mobile */
+  }
 }
 
 .wide-card {
@@ -136,15 +168,15 @@
   color: #9095a080;
 }
 
-/********** Custom Badges ***********/
-.badge-container {
+/********** Custom Tags ***********/
+.tag-container {
   display: flex;
   flex-wrap: wrap;
   width: auto;
   gap: 5px;
 }
 
-.search-badge {
+.search-tag {
   height: 28px;
   padding-left: 6px;
   padding-right: 6px;
@@ -165,18 +197,17 @@
   text-overflow: ellipsis;
   max-width: 100%;
 }
-
-.search-badge:hover {
+.search-tag:hover {
   color: #565e6cff;
   border-color: #565e6cff;
 }
-
-.search-badge:active {
+.search-tag:active {
   color: #424955ff;
   border-color: #424955ff;
 }
-
-.search-badge:disabled {
+.search-tag:disabled {
   color: #6e7787ff;
   border-color: #6e7787ff;
 }
+
+
