--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
+
 /********** Custom Backgrounds ***********/
 .earth-background {
   background-image: url('/backgrounds/earth.jpg');
@@ -117,13 +122,13 @@
 
 @media only screen and (max-width: 768px) {
   .small-card {
-    width: 125px; /* Adjusted width for mobile */
-    height: 180px; /* Adjusted height for mobile */
+    width: 125px;
+    height: 180px;
   }
 }
 
 .wide-card {
-  /* position: relative; */
+  position: relative;
   object-fit: cover;
   background-size: contain;
   background-position: center;
@@ -144,21 +149,21 @@
 }
 
 .large-card {
-  position: relative;
+  position: absolute;
   object-fit: cover;
   background-size: contain;
   background-position: center;
-  margin-top: 36px;
+  /* margin-top: 36px; */
   width: 288px;
   height: 400px;
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow-y: auto; */
 }
 
 /********** Custom Texts ***********/
 
 .text-top-quest {
-  position: absolute;
+  position: relative;
   top: -6px;
   left: 12px;
   font-family: DM Sans;
@@ -209,5 +214,3 @@
   color: #6e7787ff;
   border-color: #6e7787ff;
 }
-
-
