--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,7 @@ body {
   background-position: center;
   min-height: 100vh;
   z-index: 1;
-  position: relative;
+  /* position: relative; */
 }
 
 .map-background {
@@ -178,6 +178,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: auto;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
 }
 
